# FastArray

./: README.md  TPU_INTEGRATION_SUMMARY.md  fastarray_integrated_training.py  fastarray_test_matrix_0.npz  fastarray_test_weight_matrix_1.npz  fastarray_test_weight_matrix_2.npz  jax_tpu_guide.py  pyproject.toml  setup.py  test_accuracy.py  test_attention.py  test_fastarray.py  test_fastarray_jax_integration.py  test_jax_tpu.py  test_model_compression.py
FastArray/: DOCUMENTATION.md
FastArray.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FastArray/fastarray/: fastarray.py  linalg.py  memory.py  random.py
FastArray/fastarray_storage/: index.json
fastarray/: __init__.py  backend.py  compression.py  fastarray.py  index.py  jax_fastarray.py  jax_integration.py  jax_training_integration.py  linalg.py  numpy_api.py
fastarray_offload/: test_array.npz
fastarray_storage/: index.json
